Home Page Again

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -379,7 +379,7 @@
 					<key>page1 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-10T18:34:36Z</date>
+						<date>2018-07-11T13:33:02Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -388,43 +388,13 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5RSIYlYQXc2d
-								uD4gltt3zw==
+								8B3PAeTDphL8
+								uvejPL87Uw==
 								</data>
 								<key>Size</key>
-								<integer>70533</integer>
+								<integer>66254</integer>
 							</dict>
-							<key>index_files/medium_526238.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								ObAxj+uZ+db3
-								aD+krt2AIg==
-								</data>
-								<key>Size</key>
-								<integer>161836</integer>
-							</dict>
-							<key>index_files/medium_526249.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								nADf6fHxau4a
-								G2s0VctITQ==
-								</data>
-								<key>Size</key>
-								<integer>144349</integer>
-							</dict>
-							<key>index_files/medium_526305.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								CuUnc08CmXPN
-								Tiq5ImyBXQ==
-								</data>
-								<key>Size</key>
-								<integer>159243</integer>
-							</dict>
-							<key>index_files/medium_526547.png</key>
+							<key>index_files/medium_526602.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -434,7 +404,7 @@
 								<key>Size</key>
 								<integer>330014</integer>
 							</dict>
-							<key>index_files/medium_526587.png</key>
+							<key>index_files/medium_526714.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -444,127 +414,37 @@
 								<key>Size</key>
 								<integer>151248</integer>
 							</dict>
-							<key>index_files/small_526238.png</key>
+							<key>index_files/medium_526728.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								L7uqIHqIPK6D
-								7bPWnx99Jg==
+								ObAxj+uZ+db3
+								aD+krt2AIg==
 								</data>
 								<key>Size</key>
-								<integer>179394</integer>
+								<integer>161836</integer>
 							</dict>
-							<key>index_files/small_526249.png</key>
+							<key>index_files/medium_526741.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								RQpG5l32LHX7
-								TAk8lyjNOg==
+								CuUnc08CmXPN
+								Tiq5ImyBXQ==
 								</data>
 								<key>Size</key>
-								<integer>181544</integer>
+								<integer>159243</integer>
 							</dict>
-							<key>index_files/small_526305.png</key>
+							<key>index_files/medium_526754.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								BfnnCWYgs0U9
-								O3e3uhu90g==
+								nADf6fHxau4a
+								G2s0VctITQ==
 								</data>
 								<key>Size</key>
-								<integer>147975</integer>
+								<integer>144349</integer>
 							</dict>
-							<key>index_files/small_526368.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								syd5ScMzK+Md
-								76SbQPb+5w==
-								</data>
-								<key>Size</key>
-								<integer>438998</integer>
-							</dict>
-							<key>index_files/small_526372.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								1aktZFHGt6SM
-								HC7djJvX6Q==
-								</data>
-								<key>Size</key>
-								<integer>38017</integer>
-							</dict>
-							<key>index_files/small_526373.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								leFTMFwpW7MP
-								EBVxjwxcmQ==
-								</data>
-								<key>Size</key>
-								<integer>41843</integer>
-							</dict>
-							<key>index_files/small_526374.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								puSiyfTJWAzj
-								ZpgEIht62w==
-								</data>
-								<key>Size</key>
-								<integer>48053</integer>
-							</dict>
-							<key>index_files/small_526381.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								WH6KVJtESc55
-								UPLBdfd4OA==
-								</data>
-								<key>Size</key>
-								<integer>53326</integer>
-							</dict>
-							<key>index_files/small_526384.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								Yb+L/heiX6tP
-								YliFF2auMA==
-								</data>
-								<key>Size</key>
-								<integer>269913</integer>
-							</dict>
-							<key>index_files/small_526391.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								VZh7ikUd4q1N
-								vmZGDQPXng==
-								</data>
-								<key>Size</key>
-								<integer>131292</integer>
-							</dict>
-							<key>index_files/small_526403.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								ICYi4Z+nlMU5
-								ZJ5jWAVsyg==
-								</data>
-								<key>Size</key>
-								<integer>170336</integer>
-							</dict>
-							<key>index_files/small_526406.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								GQDM2Q1auRI7
-								rVVJJW77fA==
-								</data>
-								<key>Size</key>
-								<integer>125690</integer>
-							</dict>
-							<key>index_files/small_526547.png</key>
+							<key>index_files/small_526602.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -574,7 +454,7 @@
 								<key>Size</key>
 								<integer>330014</integer>
 							</dict>
-							<key>index_files/small_526563.png</key>
+							<key>index_files/small_526628.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -584,7 +464,7 @@
 								<key>Size</key>
 								<integer>29901</integer>
 							</dict>
-							<key>index_files/small_526567.png</key>
+							<key>index_files/small_526664.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -594,7 +474,27 @@
 								<key>Size</key>
 								<integer>37958</integer>
 							</dict>
-							<key>index_files/small_526584.jpg</key>
+							<key>index_files/small_526710.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								syd5ScMzK+Md
+								76SbQPb+5w==
+								</data>
+								<key>Size</key>
+								<integer>438998</integer>
+							</dict>
+							<key>index_files/small_526714.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								zyJjwa00+qS6
+								8ZFxcDVfDg==
+								</data>
+								<key>Size</key>
+								<integer>146474</integer>
+							</dict>
+							<key>index_files/small_526720.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
@@ -604,15 +504,115 @@
 								<key>Size</key>
 								<integer>49488</integer>
 							</dict>
-							<key>index_files/small_526587.png</key>
+							<key>index_files/small_526728.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								zyJjwa00+qS6
-								8ZFxcDVfDg==
+								L7uqIHqIPK6D
+								7bPWnx99Jg==
 								</data>
 								<key>Size</key>
-								<integer>146474</integer>
+								<integer>179394</integer>
+							</dict>
+							<key>index_files/small_526734.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								1aktZFHGt6SM
+								HC7djJvX6Q==
+								</data>
+								<key>Size</key>
+								<integer>38017</integer>
+							</dict>
+							<key>index_files/small_526741.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								BfnnCWYgs0U9
+								O3e3uhu90g==
+								</data>
+								<key>Size</key>
+								<integer>147975</integer>
+							</dict>
+							<key>index_files/small_526747.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								puSiyfTJWAzj
+								ZpgEIht62w==
+								</data>
+								<key>Size</key>
+								<integer>48053</integer>
+							</dict>
+							<key>index_files/small_526754.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								RQpG5l32LHX7
+								TAk8lyjNOg==
+								</data>
+								<key>Size</key>
+								<integer>181544</integer>
+							</dict>
+							<key>index_files/small_526760.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								leFTMFwpW7MP
+								EBVxjwxcmQ==
+								</data>
+								<key>Size</key>
+								<integer>41843</integer>
+							</dict>
+							<key>index_files/small_526771.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								WH6KVJtESc55
+								UPLBdfd4OA==
+								</data>
+								<key>Size</key>
+								<integer>53326</integer>
+							</dict>
+							<key>index_files/small_526775.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								VZh7ikUd4q1N
+								vmZGDQPXng==
+								</data>
+								<key>Size</key>
+								<integer>131292</integer>
+							</dict>
+							<key>index_files/small_526779.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								GQDM2Q1auRI7
+								rVVJJW77fA==
+								</data>
+								<key>Size</key>
+								<integer>125690</integer>
+							</dict>
+							<key>index_files/small_526783.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Yb+L/heiX6tP
+								YliFF2auMA==
+								</data>
+								<key>Size</key>
+								<integer>269913</integer>
+							</dict>
+							<key>index_files/small_526787.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ICYi4Z+nlMU5
+								ZJ5jWAVsyg==
+								</data>
+								<key>Size</key>
+								<integer>170336</integer>
 							</dict>
 							<key>index_files/small_p60859_n109623.png</key>
 							<dict>
@@ -658,11 +658,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KOXcfM966p/p
-								FLYp2UyNfw==
+								Du/ek3rPlkV1
+								xSszsFf7cw==
 								</data>
 								<key>Size</key>
-								<integer>141945</integer>
+								<integer>138993</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
