--- a/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T13:33:02Z</date>
+						<date>2018-07-11T13:36:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8B3PAeTDphL8
-								uvejPL87Uw==
+								pkiesDtwT7lg
+								IV90JRWhYg==
 								</data>
 								<key>Size</key>
-								<integer>66254</integer>
+								<integer>66015</integer>
 							</dict>
 							<key>index_files/medium_526602.png</key>
 							<dict>
@@ -314,11 +314,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Du/ek3rPlkV1
-								xSszsFf7cw==
+								Ww3BIuEvrPOg
+								S5zb+Zwfvw==
 								</data>
 								<key>Size</key>
-								<integer>138993</integer>
+								<integer>138144</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
