--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/1-Research-groups/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/1-Research-groups/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T13:51:05Z</date>
+						<date>2018-07-11T15:25:18Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,31 +112,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NhMl4sojobhE
-								Wm2zo7pdSg==
+								tTFC5VBtDbd4
+								eH6VjW92Hw==
 								</data>
 								<key>Size</key>
-								<integer>106154</integer>
+								<integer>92288</integer>
 							</dict>
 							<key>files/stacks_page_page22.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								+osqbM1arNHL
-								y0+rwY8SIQ==
+								DaX0F/gfrnJG
+								ej65DvFGwQ==
 								</data>
 								<key>Size</key>
-								<integer>24349</integer>
+								<integer>25259</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								2O2TO6WB8Q0U
-								iodKrGIs7w==
+								EAifrzQq4I9F
+								Tlz5mkPWBQ==
 								</data>
 								<key>Size</key>
-								<integer>45591</integer>
+								<integer>39016</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
