Research Groups More Formatting

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -1705,7 +1705,7 @@
 					<key>page22 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T15:25:18Z</date>
+						<date>2018-07-11T16:13:49Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -1784,11 +1784,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tTFC5VBtDbd4
-								eH6VjW92Hw==
+								/3QEVStZusjq
+								HUzn2KimZQ==
 								</data>
 								<key>Size</key>
-								<integer>92288</integer>
+								<integer>92960</integer>
 							</dict>
 							<key>files/stacks_page_page22.js</key>
 							<dict>
@@ -1804,11 +1804,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EAifrzQq4I9F
-								Tlz5mkPWBQ==
+								fWwy/jlXeE3q
+								Vx/QFlAhSA==
 								</data>
 								<key>Size</key>
-								<integer>39016</integer>
+								<integer>39822</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
