Figuring out download button

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -14,7 +14,286 @@
 					<key>App Scope</key>
 					<false/>
 					<key>File References</key>
-					<array/>
+					<array>
+						<dict>
+							<key>bookmarkData</key>
+							<data>
+							Ym9va7ADAAAAAAQQMAAA
+							AC0i/MuVK0tXIk/3fXX4
+							trlTYD4ZfeFlUSnfTqZ/
+							zvIBiAIAAAQAAAADAwAA
+							AAgAKAUAAAABAQAAVXNl
+							cnMAAAAFAAAAAQEAAGtl
+							bGx5AAAACQAAAAEBAABE
+							b2N1bWVudHMAAAAGAAAA
+							AQEAAEdpdEh1YgAACQAA
+							AAEBAAB0ZWFtc2l0ZXMA
+							AAA0AAAAAQEAAFBERiBG
+							b3IgUGFydGljaXBhbnRz
+							IFNPUyBTeW1wb3NpdW0g
+							MjAxOCBzY2hlZHVsZS5w
+							ZGYkAAAAAQYAABAAAAAg
+							AAAAMAAAAEQAAABUAAAA
+							VAAAAFQAAABUAAAAaAAA
+							AAgAAAAEAwAAHGkGAAAA
+							AAAIAAAABAMAACuzCgAA
+							AAAACAAAAAQDAAAsswoA
+							AAAAAAgAAAAEAwAAdB0T
+							AAAAAAAIAAAABAMAALJ1
+							FAAAAAAACAAAAAQDAADP
+							mBcAAAAAAAgAAAAEAwAA
+							hM8XAAAAAAAIAAAABAMA
+							AAngFwAAAAAACAAAAAQD
+							AADNIxoAAAAAACQAAAAB
+							BgAA0AAAAOAAAADwAAAA
+							AAEAABABAAAgAQAAMAEA
+							AEABAABQAQAACAAAAAAE
+							AABBwHs1wAAAABgAAAAB
+							AgAAAQAAAAAAAAAPAAAA
+							AAAAAAAAAAAAAAAAAAAA
+							AAEFAAAEAAAAAwMAAAEA
+							AAAIAAAABAMAAAcAAAAA
+							AAAABAAAAAMDAAD2AQAA
+							CAAAAAEJAABmaWxlOi8v
+							LwwAAAABAQAATWFjaW50
+							b3NoIEhECAAAAAQDAAAA
+							AABWOwAAAAgAAAAABAAA
+							Qb8pM3cAAAAkAAAAAQEA
+							ADMwMUMyOUYwLUM3MkUt
+							MzYzMC04NDFFLTczODA3
+							NDFERjg0QxgAAAABAgAA
+							gQAAAAEAAADvEwAAAQAA
+							AAAAAAAAAAAAAQAAAAEB
+							AAAvAAAA8AAAAP7///8B
+							AAAAAAAAABMAAAAEEAAA
+							pAAAAAAAAAAFEAAAYAEA
+							AAAAAAAQEAAAnAEAAAAA
+							AABAEAAAjAEAAAAAAABU
+							EAAAxAEAAAAAAABVEAAA
+							xAEAAAAAAABWEAAAvAEA
+							AAAAAAACIAAAfAIAAAAA
+							AAAFIAAA7AEAAAAAAAAQ
+							IAAA/AEAAAAAAAARIAAA
+							MAIAAAAAAAASIAAAEAIA
+							AAAAAAATIAAAIAIAAAAA
+							AAAgIAAAXAIAAAAAAAAw
+							IAAAvAEAAAAAAAABwAAA
+							0AEAAAAAAAARwAAAIAAA
+							AAAAAAASwAAA4AEAAAAA
+							AAAQ0AAABAAAAAAAAAA=
+							</data>
+							<key>fullPath</key>
+							<string>/Users/kelly/Documents/GitHub/teamsites/teamsites/teamsites/teamsites/PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<key>identifier</key>
+							<string>557808D2-ADAB-4BBB-8C07-558587E1A0A4</string>
+							<key>isInternal</key>
+							<false/>
+						</dict>
+						<dict>
+							<key>bookmarkData</key>
+							<data>
+							Ym9va7ADAAAAAAQQMAAA
+							AC0i/MuVK0tXIk/3fXX4
+							trlTYD4ZfeFlUSnfTqZ/
+							zvIBiAIAAAQAAAADAwAA
+							AAgAKAUAAAABAQAAVXNl
+							cnMAAAAFAAAAAQEAAGtl
+							bGx5AAAACQAAAAEBAABE
+							b2N1bWVudHMAAAAGAAAA
+							AQEAAEdpdEh1YgAACQAA
+							AAEBAAB0ZWFtc2l0ZXMA
+							AAA0AAAAAQEAAFBERiBG
+							b3IgUGFydGljaXBhbnRz
+							IFNPUyBTeW1wb3NpdW0g
+							MjAxOCBzY2hlZHVsZS5w
+							ZGYkAAAAAQYAABAAAAAg
+							AAAAMAAAAEQAAABUAAAA
+							VAAAAFQAAABUAAAAaAAA
+							AAgAAAAEAwAAHGkGAAAA
+							AAAIAAAABAMAACuzCgAA
+							AAAACAAAAAQDAAAsswoA
+							AAAAAAgAAAAEAwAAdB0T
+							AAAAAAAIAAAABAMAALJ1
+							FAAAAAAACAAAAAQDAADP
+							mBcAAAAAAAgAAAAEAwAA
+							hM8XAAAAAAAIAAAABAMA
+							AAngFwAAAAAACAAAAAQD
+							AADNIxoAAAAAACQAAAAB
+							BgAA0AAAAOAAAADwAAAA
+							AAEAABABAAAgAQAAMAEA
+							AEABAABQAQAACAAAAAAE
+							AABBwHs1wAAAABgAAAAB
+							AgAAAQAAAAAAAAAPAAAA
+							AAAAAAAAAAAAAAAAAAAA
+							AAEFAAAEAAAAAwMAAAEA
+							AAAIAAAABAMAAAcAAAAA
+							AAAABAAAAAMDAAD2AQAA
+							CAAAAAEJAABmaWxlOi8v
+							LwwAAAABAQAATWFjaW50
+							b3NoIEhECAAAAAQDAAAA
+							AABWOwAAAAgAAAAABAAA
+							Qb8pM3cAAAAkAAAAAQEA
+							ADMwMUMyOUYwLUM3MkUt
+							MzYzMC04NDFFLTczODA3
+							NDFERjg0QxgAAAABAgAA
+							gQAAAAEAAADvEwAAAQAA
+							AAAAAAAAAAAAAQAAAAEB
+							AAAvAAAA8AAAAP7///8B
+							AAAAAAAAABMAAAAEEAAA
+							pAAAAAAAAAAFEAAAYAEA
+							AAAAAAAQEAAAnAEAAAAA
+							AABAEAAAjAEAAAAAAABU
+							EAAAxAEAAAAAAABVEAAA
+							xAEAAAAAAABWEAAAvAEA
+							AAAAAAACIAAAfAIAAAAA
+							AAAFIAAA7AEAAAAAAAAQ
+							IAAA/AEAAAAAAAARIAAA
+							MAIAAAAAAAASIAAAEAIA
+							AAAAAAATIAAAIAIAAAAA
+							AAAgIAAAXAIAAAAAAAAw
+							IAAAvAEAAAAAAAABwAAA
+							0AEAAAAAAAARwAAAIAAA
+							AAAAAAASwAAA4AEAAAAA
+							AAAQ0AAABAAAAAAAAAA=
+							</data>
+							<key>fullPath</key>
+							<string>/Users/kelly/Documents/GitHub/teamsites/teamsites/teamsites/teamsites/PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<key>identifier</key>
+							<string>F6BA7CC5-602E-4075-BF7E-8801313D8523</string>
+							<key>isInternal</key>
+							<false/>
+						</dict>
+						<dict>
+							<key>bookmarkData</key>
+							<data>
+							Ym9vaxwDAAAAAAQQMAAA
+							ADi26W7Sc7gFlpF+YUXJ
+							kEH6L8atvU4DbgzJdk59
+							pNwb9AEAAAQAAAADAwAA
+							AAgAKAUAAAABAQAAVXNl
+							cnMAAAAFAAAAAQEAAGtl
+							bGx5AAAABwAAAAEBAABE
+							ZXNrdG9wADQAAAABAQAA
+							UERGIEZvciBQYXJ0aWNp
+							cGFudHMgU09TIFN5bXBv
+							c2l1bSAyMDE4IHNjaGVk
+							dWxlLnBkZhAAAAABBgAA
+							EAAAACAAAAAwAAAAQAAA
+							AAgAAAAEAwAAHGkGAAAA
+							AAAIAAAABAMAACuzCgAA
+							AAAACAAAAAQDAAA9swoA
+							AAAAAAgAAAAEAwAAKGwa
+							AAAAAAAQAAAAAQYAAJQA
+							AACkAAAAtAAAAMQAAAAI
+							AAAAAAQAAEHAezXAAAAA
+							GAAAAAECAAABAAAAAAAA
+							AA8AAAAAAAAAAAAAAAAA
+							AAAAAAAAAQUAAAQAAAAD
+							AwAABwAAAAQAAAADAwAA
+							AgAAAAgAAAAEAwAAAgAA
+							AAAAAAAEAAAAAwMAAPYB
+							AAAIAAAAAQkAAGZpbGU6
+							Ly8vDAAAAAEBAABNYWNp
+							bnRvc2ggSEQIAAAABAMA
+							AAAAAFY7AAAACAAAAAAE
+							AABBvykzdwAAACQAAAAB
+							AQAAMzAxQzI5RjAtQzcy
+							RS0zNjMwLTg0MUUtNzM4
+							MDc0MURGODRDGAAAAAEC
+							AACBAAAAAQAAAO8TAAAB
+							AAAAAAAAAAAAAAABAAAA
+							AQEAAC8AAADwAAAA/v//
+							/wEAAAAAAAAAEwAAAAQQ
+							AAB8AAAAAAAAAAUQAADU
+							AAAAAAAAABAQAAD8AAAA
+							AAAAAEAQAADsAAAAAAAA
+							AFQQAAAkAQAAAAAAAFUQ
+							AAAwAQAAAAAAAFYQAAAc
+							AQAAAAAAAAIgAADoAQAA
+							AAAAAAUgAABYAQAAAAAA
+							ABAgAABoAQAAAAAAABEg
+							AACcAQAAAAAAABIgAAB8
+							AQAAAAAAABMgAACMAQAA
+							AAAAACAgAADIAQAAAAAA
+							ADAgAAAcAQAAAAAAAAHA
+							AAA8AQAAAAAAABHAAAAg
+							AAAAAAAAABLAAABMAQAA
+							AAAAABDQAAAEAAAAAAAA
+							AA==
+							</data>
+							<key>fullPath</key>
+							<string>/Users/kelly/Desktop/PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<key>identifier</key>
+							<string>363958A5-A9BE-436B-BD47-E764355737CA</string>
+							<key>isInternal</key>
+							<false/>
+						</dict>
+						<dict>
+							<key>bookmarkData</key>
+							<data>
+							Ym9vayADAAAAAAQQMAAA
+							AG/zSw7YSgFJ27aDzsHX
+							ra1WME6BnUPHu57A1ejW
+							kKR0+AEAAAQAAAADAwAA
+							AAgAKAUAAAABAQAAVXNl
+							cnMAAAAFAAAAAQEAAGtl
+							bGx5AAAABwAAAAEBAABE
+							ZXNrdG9wADgAAAABAQAA
+							UERGIEZvciBQYXJ0aWNp
+							cGFudHMgU09TIFN5bXBv
+							c2l1bSAyMDE4IHNjaGVk
+							dWxlLnBkZi56aXAQAAAA
+							AQYAABAAAAAgAAAAMAAA
+							AEAAAAAIAAAABAMAABxp
+							BgAAAAAACAAAAAQDAAAr
+							swoAAAAAAAgAAAAEAwAA
+							PbMKAAAAAAAIAAAABAMA
+							AFJsGgAAAAAAEAAAAAEG
+							AACYAAAAqAAAALgAAADI
+							AAAACAAAAAAEAABBwHs6
+							HIAAABgAAAABAgAAAQAA
+							AAAAAAAPAAAAAAAAAAAA
+							AAAAAAAAAAAAAAEFAAAE
+							AAAAAwMAAAcAAAAEAAAA
+							AwMAAAIAAAAIAAAABAMA
+							AAIAAAAAAAAABAAAAAMD
+							AAD2AQAACAAAAAEJAABm
+							aWxlOi8vLwwAAAABAQAA
+							TWFjaW50b3NoIEhECAAA
+							AAQDAAAAAABWOwAAAAgA
+							AAAABAAAQb8pM3cAAAAk
+							AAAAAQEAADMwMUMyOUYw
+							LUM3MkUtMzYzMC04NDFF
+							LTczODA3NDFERjg0QxgA
+							AAABAgAAgQAAAAEAAADv
+							EwAAAQAAAAAAAAAAAAAA
+							AQAAAAEBAAAvAAAA8AAA
+							AP7///8BAAAAAAAAABMA
+							AAAEEAAAgAAAAAAAAAAF
+							EAAA2AAAAAAAAAAQEAAA
+							AAEAAAAAAABAEAAA8AAA
+							AAAAAABUEAAAKAEAAAAA
+							AABVEAAANAEAAAAAAABW
+							EAAAIAEAAAAAAAACIAAA
+							7AEAAAAAAAAFIAAAXAEA
+							AAAAAAAQIAAAbAEAAAAA
+							AAARIAAAoAEAAAAAAAAS
+							IAAAgAEAAAAAAAATIAAA
+							kAEAAAAAAAAgIAAAzAEA
+							AAAAAAAwIAAAIAEAAAAA
+							AAABwAAAQAEAAAAAAAAR
+							wAAAIAAAAAAAAAASwAAA
+							UAEAAAAAAAAQ0AAABAAA
+							AAAAAAA=
+							</data>
+							<key>fullPath</key>
+							<string>/Users/kelly/Desktop/PDF For Participants SOS Symposium 2018 schedule.pdf.zip</string>
+							<key>identifier</key>
+							<string>E1FEDAF7-CA65-41AB-A0EB-4A7CD8D974BA</string>
+							<key>isInternal</key>
+							<false/>
+						</dict>
+					</array>
 				</dict>
 				<key>Minimum Application Version</key>
 				<string>7.1</string>
@@ -1705,7 +1984,7 @@
 					<key>page22 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T16:13:49Z</date>
+						<date>2018-07-11T17:09:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -1784,8 +2063,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/3QEVStZusjq
-								HUzn2KimZQ==
+								Kdp7hcR33Ehe
+								Bx8hW0esmw==
 								</data>
 								<key>Size</key>
 								<integer>92960</integer>
@@ -1804,11 +2083,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fWwy/jlXeE3q
-								Vx/QFlAhSA==
+								szmGl9iEte/u
+								Z4YziqDD8Q==
 								</data>
 								<key>Size</key>
-								<integer>39822</integer>
+								<integer>41294</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4751,7 +5030,7 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T13:51:05Z</date>
+						<date>2018-07-11T17:14:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5080,11 +5359,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9Ce2dM9WlfmA
-								b7KtfmQfYA==
+								GS8T4E1qmkR4
+								TXFDvKstuw==
 								</data>
 								<key>Size</key>
-								<integer>105792</integer>
+								<integer>106101</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7127,7 +7406,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T15:10:58Z</date>
+						<date>2018-07-11T17:11:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7176,17 +7455,43 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uV4H9XxH5iN8
-								2KYahKrCFA==
+								/41lsDNNgITQ
+								Yb6wGKHkpA==
 								</data>
 								<key>Size</key>
-								<integer>5478</integer>
+								<integer>4198</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
 						<string>rw:document:extrafiles</string>
 						<key>SiteRoot</key>
 						<string></string>
+						<key>Version</key>
+						<integer>3</integer>
+					</dict>
+					<key>rw:document:resources - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
+					<dict>
+						<key>CreationDate</key>
+						<date>2018-07-11T17:14:51Z</date>
+						<key>DigestAlgorithm</key>
+						<string>MD5</string>
+						<key>PageDigests</key>
+						<dict>
+							<key>PDF-For-Participants-SOS-Symposium-2018-schedule.pdf</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								9OzpkgmpXS0I
+								djoM5C2CQg==
+								</data>
+								<key>Size</key>
+								<integer>47041</integer>
+							</dict>
+						</dict>
+						<key>PageID</key>
+						<string>rw:document:resources</string>
+						<key>SiteRoot</key>
+						<string>resources</string>
 						<key>Version</key>
 						<integer>3</integer>
 					</dict>
@@ -8325,30 +8630,49 @@
 				</dict>
 				<key>Site Resources</key>
 				<data>
-				YnBsaXN0MDDUAQIDBAUGUlNYJHZlcnNpb25YJG9iamVj
-				dHNZJGFyY2hpdmVyVCR0b3ASAAGGoK8QEQcIExQVHyIp
-				LTE1OT1FSExQVSRudWxs0wkKCwwPEldOUy5rZXlzWk5T
-				Lm9iamVjdHNWJGNsYXNzog0OgAKAA6IQEYAEgAyAEFhk
-				YXRhYmFzZVRub2Rl1QsWFxgZGhscHR5eSWRlbnRpZmll
-				ciBNYXBYUGFnZSBNYXBYTm9kZSBNYXBZUmVzb3VyY2Vz
-				gAuAB4AKgAmABdIKCyAhoIAG0iMkJSZaJGNsYXNzbmFt
-				ZVgkY2xhc3Nlc1xOU011dGFibGVTZXSjJScoVU5TU2V0
-				WE5TT2JqZWN00wkKCyorLKCggAjSIyQuL18QE05TTXV0
-				YWJsZURpY3Rpb25hcnmjLjAoXE5TRGljdGlvbmFyedMJ
-				CgsyMyygoIAI0wkKCzY3LKCggAjSIyQ6O18QElJXUmVz
-				b3VyY2VEYXRhYmFzZaI8KF8QElJXUmVzb3VyY2VEYXRh
-				YmFzZdQLPj9AQUJDQ1hDaGlsZHJlblZQYXJlbnRfEBJS
-				ZXByZXNlbnRlZCBPYmplY3SAD4ANgACAANIKC0ZHoIAO
-				0iMkSUpeTlNNdXRhYmxlQXJyYXmjSUsoV05TQXJyYXnS
-				IyRNTl8QEFJXU291cmNlTGlzdE5vZGWiTyhfEBBSV1Nv
-				dXJjZUxpc3ROb2Rl0iMkMFGiMChfEA9OU0tleWVkQXJj
-				aGl2ZXLRVFVUcm9vdIABAAgAEQAaACMALQAyADcASwBR
-				AFgAYABrAHIAdQB3AHkAfAB+AIAAggCLAJAAmwCqALMA
-				vADGAMgAygDMAM4A0ADVANYA2ADdAOgA8QD+AQIBCAER
-				ARgBGQEaARwBIQE3ATsBSAFPAVABUQFTAVoBWwFcAV4B
-				YwF4AXsBkAGZAaIBqQG+AcABwgHEAcYBywHMAc4B0wHi
-				AeYB7gHzAgYCCQIcAiECJAI2AjkCPgAAAAAAAAIBAAAA
-				AAAAAFYAAAAAAAAAAAAAAAAAAAJA
+				YnBsaXN0MDDUAQIDBAUGlZZYJHZlcnNpb25YJG9iamVj
+				dHNZJGFyY2hpdmVyVCR0b3ASAAGGoK8QIAcIExQVHyM1
+				Njc4PEJGSk5SWF5maW1ydXZ6foOHi4+TVSRudWxs0wkK
+				CwwPEldOUy5rZXlzWk5TLm9iamVjdHNWJGNsYXNzog0O
+				gAKAA6IQEYAEgBqAH1hkYXRhYmFzZVRub2Rl1QsWFxgZ
+				GhscHR5eSWRlbnRpZmllciBNYXBYUGFnZSBNYXBYTm9k
+				ZSBNYXBZUmVzb3VyY2VzgB6AEIAdgBGABdIKCyAioSGA
+				BoAP2SQLJSYnKCkqKywtLi4wMTIzNF5SZW1vdGVSZXNv
+				dXJjZVxQdWJsaXNoZWRVUkxdUHVibGlzaGVkRGF0ZV8Q
+				D0NoYW5nZWRTdGF0dXNlc1ROYW1lWklkZW50aWZpZXJZ
+				VGltZVN0YW1wWUZpbGVUb2tlbgiADoAAgACADIAIgAeA
+				CoAJXxAkQTAzODU1MDktNEU4Mi00NEJDLTgxNDYtQTc2
+				RTlDNzgyOEM3XxA4UERGIEZvciBQYXJ0aWNpcGFudHMg
+				U09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBkZi56
+				aXBfECRFMUZFREFGNy1DQTY1LTQxQUItQTBFQi00QTdD
+				RDhEOTc0QkHSOQs6O1dOUy50aW1lI0HAezosAAAAgAvS
+				PT4/QFokY2xhc3NuYW1lWCRjbGFzc2VzVk5TRGF0ZaI/
+				QVhOU09iamVjdNMJCgtDREWgoIAN0j0+R0hfEBNOU011
+				dGFibGVEaWN0aW9uYXJ5o0dJQVxOU0RpY3Rpb25hcnnS
+				PT5LTF5SV1NpdGVSZXNvdXJjZaJNQV5SV1NpdGVSZXNv
+				dXJjZdI9Pk9QXE5TTXV0YWJsZVNldKNPUUFVTlNTZXTT
+				CQoLU1VFoTKAB6EhgAaADdMJCgtZW0WhMoAHoVyAEoAN
+				1AtfYGFiY2QhWENoaWxkcmVuVlBhcmVudF8QElJlcHJl
+				c2VudGVkIE9iamVjdIAcgBOAFYAG0goLZ2iggBTSPT5q
+				a15OU011dGFibGVBcnJheaNqbEFXTlNBcnJhedQLX2Bh
+				Ym8RcYAcgBmAGoAW0igLc3SAF4AYWURvd25sb2Fkc9I9
+				Pnd4XFJXU2l0ZUZvbGRlcqJ5QVxSV1NpdGVGb2xkZXLS
+				Cgt7aKFcgBKAFNQLX2BhYoAuLoAcgBuAAIAA0goLhGih
+				ZIAVgBTSPT6IiV8QEFJXU291cmNlTGlzdE5vZGWiikFf
+				EBBSV1NvdXJjZUxpc3ROb2Rl0wkKC4yNRaCggA3SPT6Q
+				kV8QElJXUmVzb3VyY2VEYXRhYmFzZaKSQV8QElJXUmVz
+				b3VyY2VEYXRhYmFzZdI9PkmUoklBXxAPTlNLZXllZEFy
+				Y2hpdmVy0ZeYVHJvb3SAAQAIABEAGgAjAC0AMgA3AFoA
+				YABnAG8AegCBAIQAhgCIAIsAjQCPAJEAmgCfAKoAuQDC
+				AMsA1QDXANkA2wDdAN8A5ADmAOgA6gD9AQwBGQEnATkB
+				PgFJAVMBXQFeAWABYgFkAWYBaAFqAWwBbgGVAdAB9wH8
+				AgQCDQIPAhQCHwIoAi8CMgI7AkICQwJEAkYCSwJhAmUC
+				cgJ3AoYCiQKYAp0CqgKuArQCuwK9Ar8CwQLDAsUCzALO
+				AtAC0gLUAtYC3wLoAu8DBAMGAwgDCgMMAxEDEgMUAxkD
+				KAMsAzQDPQM/A0EDQwNFA0oDTANOA1gDXQNqA20DegN/
+				A4EDgwOFA44DkAOSA5QDlgObA50DnwOhA6YDuQO8A88D
+				1gPXA9gD2gPfA/QD9wQMBBEEFAQmBCkELgAAAAAAAAIB
+				AAAAAAAAAJkAAAAAAAAAAAAAAAAAAAQw
 				</data>
 				<key>SiteAttributes</key>
 				<dict>
