--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T13:51:05Z</date>
+						<date>2018-07-11T17:14:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -362,11 +362,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9Ce2dM9WlfmA
-								b7KtfmQfYA==
+								GS8T4E1qmkR4
+								TXFDvKstuw==
 								</data>
 								<key>Size</key>
-								<integer>105792</integer>
+								<integer>106101</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
