--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/1-Research-groups/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/1-Research-groups/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-11T16:13:49Z</date>
+						<date>2018-07-11T17:09:32Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,8 +112,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/3QEVStZusjq
-								HUzn2KimZQ==
+								Kdp7hcR33Ehe
+								Bx8hW0esmw==
 								</data>
 								<key>Size</key>
 								<integer>92960</integer>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fWwy/jlXeE3q
-								Vx/QFlAhSA==
+								szmGl9iEte/u
+								Z4YziqDD8Q==
 								</data>
 								<key>Size</key>
-								<integer>39822</integer>
+								<integer>41294</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
